--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
         <h1>Etch-a-Sketch</h1>
         <p>Move your mouse to draw some things</p>
 
+        <div class="container">
+
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+
+
+        </div>
+
         <script src="script.js"></script>
     </body>
 </html>
