Delete the handmaid divs

--- a/index.html
+++ b/index.html
@@ -11,23 +11,7 @@
         <h1>Etch-a-Sketch</h1>
         <p>Move your mouse to draw some things</p>
 
-        <div class="container">
-
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-
+        <div id="container" class="container">
 
         </div>
 
